@@ -60,6 +60,9 @@ BUGFIXES:
   ZOOKEEPER-1633. Introduce a protocol version to connection initiation
   message (Alexander Shraer via michim)
 
+  ZOOKEEPER-1697:  large snapshots can cause continuous quorum failure
+  (phunt via fpj)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-1564. Allow JUnit test build with IBM Java
